--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -34,7 +34,7 @@
 </p><p>&#1053;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1080;, &#1085;&#1103;&#1082;&#1086;&#1080; &#1089;&#1072; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Property_editor_Data.png&amp;filetimestamp=20240716133440&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Property_editor_Data.png" decoding="async" width="300" height="456" class="mw-file-element" data-file-width="373" data-file-height="567"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Data properties of a <a href="../Part_Box.html" title="Part Box">Part Box</a></p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; Data &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; <a href="../Part_Box.html" title="Part Box">Part Box</a></p>
 <p><span id="Property_types"></span>
 </p>
 <h2><span id=".D0.A2.D0.B8.D0.BF.D0.BE.D0.B2.D0.B5_.D0.BD.D0.B0_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0.D1.82.D0.B0"></span><span class="mw-headline" id="&#1058;&#1080;&#1087;&#1086;&#1074;&#1077;_&#1085;&#1072;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;">&#1058;&#1080;&#1087;&#1086;&#1074;&#1077; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</span></h2>
@@ -170,15 +170,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123174951
+Cached time: 20260123175125
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.188 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.177 seconds
 Preprocessor visited node count: 703/1000000
-Post&#8208;expand include size: 32306/2097152 bytes
-Template argument size: 12486/2097152 bytes
+Post&#8208;expand include size: 32332/2097152 bytes
+Template argument size: 12499/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.940      1 -total
- 20.06%    9.618      1 Template:Std_Base_navi/bg
- 14.25%    6.831      3 Template:Navigation_menu_2
- 12.49%    5.989      1 Template:Interface_navi/bg
- 11.88%    5.696      1 Template:Userdocnavi/bg
-  8.68%    4.160      1 Template:PropertyData
-  6.61%    3.168      1 Template:Code
-  6.44%    3.088     26 Template:MenuCommand
-  5.99%    2.873      2 Template:Value
-  5.34%    2.561      1 Template:Caption
+100.00%   57.282      1 -total
+ 17.65%   10.108      1 Template:Std_Base_navi/bg
+ 13.18%    7.548      3 Template:Navigation_menu_2
+ 12.08%    6.921      1 Template:Userdocnavi/bg
+ 11.76%    6.738      1 Template:Interface_navi/bg
+ 11.08%    6.344      1 Template:PropertyData
+  5.96%    3.416      1 Template:Code
+  5.56%    3.184      2 Template:Value
+  5.40%    3.093      6 Template:Incode
+  5.28%    3.022      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123174950 and revision id 1743114. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175125 and revision id 1743116. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
