--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -62,7 +62,7 @@ App::PropertyVector
 <h2><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B8_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;</span></h2>
 <p>&#1056;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. &#1042;&#1098;&#1087;&#1088;&#1077;&#1082;&#1080; &#1090;&#1086;&#1074;&#1072;, &#1084;&#1085;&#1086;&#1075;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090; &#1077;&#1076;&#1085;&#1072;&#1082;&#1074;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;, &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1089;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090; &#1077;&#1076;&#1080;&#1085; &#1080; &#1089;&#1098;&#1097; &#1074;&#1098;&#1090;&#1088;&#1077;&#1096;&#1077;&#1085; &#1082;&#1083;&#1072;&#1089;.
 </p><p>&#1055;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080; &#1074; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, &#1089;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090; <code>Part::Feature</code>. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> &#1079;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1090;&#1077;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090;.
-</p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
+</p><p>&#1047;&#1072; 2D &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1103; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1089;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090; <code>Part::Part2DObject</code> (&#1089;&#1072;&#1084; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1087;&#1088;&#1086;&#1080;&#1079;&#1083;&#1080;&#1079;&#1072; &#1086;&#1090; <code>Part::Feature</code>), &#1082;&#1086;&#1081;&#1090;&#1086; &#1077; &#1074; &#1086;&#1089;&#1085;&#1086;&#1074;&#1072;&#1090;&#1072; &#1085;&#1072; <a href="../Sketch.html" title="Sketch">Sketches</a>, &#1080; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; <a href="../Draft_Workbench.html" title="Draft Workbench">Draft &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;</a>. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> &#1079;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1090;&#1077;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090;.
 </p>
 <h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
 <p>To display the context menu of the Property View right-click the background, or right-click a property.
@@ -170,12 +170,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123175125
+Cached time: 20260123175341
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.177 seconds
+CPU time usage: 0.129 seconds
+Real time usage: 0.196 seconds
 Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32332/2097152 bytes
 Template argument size: 12499/2097152 bytes
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.282      1 -total
- 17.65%   10.108      1 Template:Std_Base_navi/bg
- 13.18%    7.548      3 Template:Navigation_menu_2
- 12.08%    6.921      1 Template:Userdocnavi/bg
- 11.76%    6.738      1 Template:Interface_navi/bg
- 11.08%    6.344      1 Template:PropertyData
-  5.96%    3.416      1 Template:Code
-  5.56%    3.184      2 Template:Value
-  5.40%    3.093      6 Template:Incode
-  5.28%    3.022      1 Template:Caption
+100.00%   53.534      1 -total
+ 18.10%    9.691      1 Template:Std_Base_navi/bg
+ 14.94%    7.999      1 Template:Interface_navi/bg
+ 14.28%    7.647      3 Template:Navigation_menu_2
+ 11.98%    6.415      1 Template:Userdocnavi/bg
+  9.58%    5.130      1 Template:PropertyData
+  5.53%    2.960     26 Template:MenuCommand
+  5.42%    2.900      2 Template:Docnav
+  5.25%    2.810      2 Template:Value
+  4.86%    2.602      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175125 and revision id 1743116. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175340 and revision id 1743118. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
