--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -66,7 +66,7 @@ App::PropertyVector
 </p><p><span id="Context_menu"></span>
 </p>
 <h2><span id=".D0.9A.D0.BE.D0.BD.D1.82.D0.B5.D0.BA.D1.81.D1.82.D0.BD.D0.BE_.D0.BC.D0.B5.D0.BD.D1.8E"></span><span class="mw-headline" id="&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;_&#1084;&#1077;&#1085;&#1102;">&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</span></h2>
-<p>To display the context menu of the Property View right-click the background, or right-click a property.
+<p>&#1047;&#1072; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077;&#1090;&#1077; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1074; &#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1080;&#1083;&#1080; &#1074;&#1098;&#1088;&#1093;&#1091; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;.
 </p><p>Right-clicking the background shows three options:
 </p>
 <ul><li><b>Add Property</b>: adds a dynamic property to the object.</li></ul>
@@ -171,12 +171,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123175518
+Cached time: 20260123175630
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.145 seconds
-Real time usage: 0.235 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.337 seconds
 Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32332/2097152 bytes
 Template argument size: 12499/2097152 bytes
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   68.653      1 -total
- 20.52%   14.086      1 Template:Std_Base_navi/bg
- 15.51%   10.645      3 Template:Navigation_menu_2
- 12.44%    8.541      1 Template:Interface_navi/bg
- 11.37%    7.808      1 Template:PropertyData
-  9.20%    6.318      1 Template:Userdocnavi/bg
-  8.74%    6.003      2 Template:Value
-  5.32%    3.651      1 Template:Variable
-  5.16%    3.546     26 Template:MenuCommand
-  4.65%    3.191      2 Template:Docnav
+100.00%   90.773      1 -total
+ 17.88%   16.227      1 Template:PropertyData
+ 13.83%   12.558      1 Template:Std_Base_navi/bg
+ 11.18%   10.149      1 Template:Interface_navi/bg
+  9.94%    9.022      3 Template:Navigation_menu_2
+  8.83%    8.019      2 Template:Docnav
+  8.25%    7.491      2 Template:Value
+  7.89%    7.161      6 Template:Incode
+  6.44%    5.843      1 Template:Userdocnavi/bg
+  4.93%    4.471      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175518 and revision id 1743120. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175629 and revision id 1743122. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
