--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -67,7 +67,7 @@ App::PropertyVector
 </p>
 <h2><span id=".D0.9A.D0.BE.D0.BD.D1.82.D0.B5.D0.BA.D1.81.D1.82.D0.BD.D0.BE_.D0.BC.D0.B5.D0.BD.D1.8E"></span><span class="mw-headline" id="&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;_&#1084;&#1077;&#1085;&#1102;">&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</span></h2>
 <p>&#1047;&#1072; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077;&#1090;&#1077; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1074; &#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1080;&#1083;&#1080; &#1074;&#1098;&#1088;&#1093;&#1091; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;.
-</p><p>Right-clicking the background shows three options:
+</p><p>&#1065;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1090;&#1088;&#1080; &#1086;&#1087;&#1094;&#1080;&#1080;:
 </p>
 <ul><li><b>Add Property</b>: adds a dynamic property to the object.</li></ul>
 <ul><li><b>Expand/Collapse Properties</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
@@ -171,12 +171,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123175630
+Cached time: 20260123175702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.337 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.219 seconds
 Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32332/2097152 bytes
 Template argument size: 12499/2097152 bytes
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.773      1 -total
- 17.88%   16.227      1 Template:PropertyData
- 13.83%   12.558      1 Template:Std_Base_navi/bg
- 11.18%   10.149      1 Template:Interface_navi/bg
-  9.94%    9.022      3 Template:Navigation_menu_2
-  8.83%    8.019      2 Template:Docnav
-  8.25%    7.491      2 Template:Value
-  7.89%    7.161      6 Template:Incode
-  6.44%    5.843      1 Template:Userdocnavi/bg
-  4.93%    4.471      1 Template:Code
+100.00%   57.898      1 -total
+ 29.94%   17.337      1 Template:Std_Base_navi/bg
+ 20.05%   11.608      1 Template:Interface_navi/bg
+ 19.23%   11.136      3 Template:Navigation_menu_2
+ 13.65%    7.906      1 Template:Userdocnavi/bg
+  6.60%    3.824      1 Template:PropertyData
+  5.82%    3.371      1 Template:Code
+  3.19%    1.848      2 Template:Docnav
+  2.99%    1.731      6 Template:Incode
+  2.80%    1.621      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175629 and revision id 1743122. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175702 and revision id 1743124. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
