--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -69,7 +69,7 @@ App::PropertyVector
 <p>&#1047;&#1072; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077;&#1090;&#1077; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1074; &#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1080;&#1083;&#1080; &#1074;&#1098;&#1088;&#1093;&#1091; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;.
 </p><p>&#1065;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1090;&#1088;&#1080; &#1086;&#1087;&#1094;&#1080;&#1080;:
 </p>
-<ul><li><b>Add Property</b>: adds a dynamic property to the object.</li></ul>
+<ul><li><b>Add Property</b>: &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1076;&#1080;&#1085;&#1072;&#1084;&#1080;&#1095;&#1085;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1082;&#1098;&#1084; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.</li></ul>
 <ul><li><b>Expand/Collapse Properties</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <dl><dd>Property groups collapse/expand when you click their name. Property nodes collapse/expand when you click the symbol (usually an arrow) in front of their name.</dd></dl>
 <dl><dd><ul><li><b>Expand to Default</b>: property groups are expanded and property nodes are collapsed for the current object.</li></ul></dd></dl>
@@ -171,12 +171,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123175702
+Cached time: 20260123175729
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.219 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.199 seconds
 Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32332/2097152 bytes
 Template argument size: 12499/2097152 bytes
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.898      1 -total
- 29.94%   17.337      1 Template:Std_Base_navi/bg
- 20.05%   11.608      1 Template:Interface_navi/bg
- 19.23%   11.136      3 Template:Navigation_menu_2
- 13.65%    7.906      1 Template:Userdocnavi/bg
-  6.60%    3.824      1 Template:PropertyData
-  5.82%    3.371      1 Template:Code
-  3.19%    1.848      2 Template:Docnav
-  2.99%    1.731      6 Template:Incode
-  2.80%    1.621      1 Template:Variable
+100.00%   41.623      1 -total
+ 19.91%    8.289      1 Template:Std_Base_navi/bg
+ 19.78%    8.233      3 Template:Navigation_menu_2
+ 15.02%    6.253      1 Template:Interface_navi/bg
+ 12.73%    5.297      1 Template:Userdocnavi/bg
+  8.75%    3.644      2 Template:Docnav
+  7.82%    3.254      1 Template:PropertyData
+  4.63%    1.929      2 Template:Value
+  4.55%    1.896     26 Template:MenuCommand
+  4.15%    1.727      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175702 and revision id 1743124. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175728 and revision id 1743126. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
