--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -171,12 +171,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123175729
+Cached time: 20260123180314
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.199 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.189 seconds
 Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32332/2097152 bytes
 Template argument size: 12499/2097152 bytes
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.623      1 -total
- 19.91%    8.289      1 Template:Std_Base_navi/bg
- 19.78%    8.233      3 Template:Navigation_menu_2
- 15.02%    6.253      1 Template:Interface_navi/bg
- 12.73%    5.297      1 Template:Userdocnavi/bg
-  8.75%    3.644      2 Template:Docnav
-  7.82%    3.254      1 Template:PropertyData
-  4.63%    1.929      2 Template:Value
-  4.55%    1.896     26 Template:MenuCommand
-  4.15%    1.727      1 Template:Variable
+100.00%   46.196      1 -total
+ 24.26%   11.205      1 Template:Std_Base_navi/bg
+ 19.43%    8.978      1 Template:Interface_navi/bg
+ 18.34%    8.471      3 Template:Navigation_menu_2
+ 12.55%    5.798      1 Template:Userdocnavi/bg
+  8.65%    3.995      1 Template:PropertyData
+  5.43%    2.508     26 Template:MenuCommand
+  4.27%    1.975      2 Template:Docnav
+  3.28%    1.514      1 Template:Code
+  3.24%    1.496      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123175728 and revision id 1743126. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123180314 and revision id 1743126. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
