--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -71,7 +71,7 @@ App::PropertyVector
 </p>
 <ul><li><b>Add Property</b>: &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1076;&#1080;&#1085;&#1072;&#1084;&#1080;&#1095;&#1085;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1082;&#1098;&#1084; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.</li></ul>
 <ul><li><b>Expand/&#1057;&#1074;&#1080;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
-<dl><dd>&#1043;&#1088;&#1091;&#1087;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1089;&#1077; &#1089;&#1074;&#1080;&#1074;&#1072;&#1090; / &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1076;&#1074;&#1072;&#1081;&#1085;&#1086; &#1074;&#1098;&#1088;&#1093;&#1091; &#1080;&#1084;&#1077;&#1090;&#1086; &#1085;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072;&#1090;&#1072;. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1074;&#1098;&#1079;&#1083; &#1089;&#1077; &#1089;&#1074;&#1080;&#1074;&#1072;&#1090;/&#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1089;&#1080;&#1084;&#1074;&#1086;&#1083;&#1072; (&#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;) &#1087;&#1088;&#1077;&#1076; &#1080;&#1084;&#1077;&#1090;&#1086; &#1080;&#1084;.</dd></dl>
+<dl><dd>&#1043;&#1088;&#1091;&#1087;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1089;&#1077; &#1089;&#1074;&#1080;&#1074;&#1072;&#1090; / &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1076;&#1074;&#1072;&#1081;&#1085;&#1086; &#1074;&#1098;&#1088;&#1093;&#1091; &#1080;&#1084;&#1077;&#1090;&#1086; &#1085;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072;&#1090;&#1072;. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1074;&#1098;&#1079;&#1083;&#1080; &#1089;&#1077; &#1089;&#1074;&#1080;&#1074;&#1072;&#1090;/&#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1089;&#1080;&#1084;&#1074;&#1086;&#1083;&#1072; (&#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;) &#1087;&#1088;&#1077;&#1076; &#1080;&#1084;&#1077;&#1090;&#1086; &#1080;&#1084;.</dd></dl>
 <dl><dd><ul><li><b>Expand to Default</b>: property groups are expanded and property nodes are collapsed for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Expand All</b>: property groups and property nodes are expanded for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Collapse All</b>: property groups and property nodes are collapsed for the current object.</li></ul></dd></dl>
@@ -171,12 +171,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123180929
+Cached time: 20260123181000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.298 seconds
+CPU time usage: 0.128 seconds
+Real time usage: 0.174 seconds
 Preprocessor visited node count: 704/1000000
 Post&#8208;expand include size: 32353/2097152 bytes
 Template argument size: 12520/2097152 bytes
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.875      1 -total
- 19.99%   11.568      1 Template:Std_Base_navi/bg
- 16.91%    9.785      3 Template:Navigation_menu_2
- 15.46%    8.947      1 Template:Interface_navi/bg
- 10.16%    5.879      1 Template:Userdocnavi/bg
-  7.48%    4.330      2 Template:Docnav
-  6.70%    3.878      1 Template:PropertyData
-  5.19%    3.002      1 Template:Code
-  5.09%    2.945      1 Template:TRUE
-  4.95%    2.864      2 Template:Value
+100.00%   48.505      1 -total
+ 20.12%    9.760      1 Template:Std_Base_navi/bg
+ 19.08%    9.256      3 Template:Navigation_menu_2
+ 17.09%    8.288      1 Template:Interface_navi/bg
+ 11.49%    5.572      1 Template:Userdocnavi/bg
+  9.65%    4.682      1 Template:PropertyData
+  7.00%    3.394      2 Template:Docnav
+  4.44%    2.155      1 Template:Code
+  4.36%    2.116      1 Template:Variable
+  3.98%    1.930      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123180929 and revision id 1743131. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123181000 and revision id 1743133. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
